--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
      </header>
      
      <h1>Animation Buttons</h1>
-     <p>Hover us and enjoy the satisfying neumorphic animation designs!</p>
+     <p>
+     Passe o mouse sobre nós e aproveite os designs de animação
+     </p>
      <div class="frame">
-       <button class="custom-btn btn-1">Read More</button>
-       <button class="custom-btn btn-2">Read More</button>
-       <button class="custom-btn btn-3"><span>Read More</span></button>
-       <button class="custom-btn btn-4"><span>Read More</span></button>
-       <button class="custom-btn btn-5"><span>Read More</span></button>
-       <button class="custom-btn btn-6"><span>Read More</span></button>
-       <button class="custom-btn btn-7"><span>Read More</span></button>
-       <button class="custom-btn btn-8"><span>Read More</span></button>
-       <button class="custom-btn btn-9">Read More</button>
-       <button class="custom-btn btn-10">Read More</button>
-       <button class="custom-btn btn-11">Read More<div class="dot"></div></button>
-       <button class="custom-btn btn-12"><span>Click!</span><span>Read More</span></button>
-       <button class="custom-btn btn-13">Read More</button>
-       <button class="custom-btn btn-14">Read More</button>
-       <button class="custom-btn btn-15">Read More</button>
-       <button class="custom-btn btn-16">Read More</button>
+       <button class="custom-btn btn-1">Veja</button>
+       <button class="custom-btn btn-2">Veja</button>
+       <button class="custom-btn btn-3"><span>Veja</span></button>
+       <button class="custom-btn btn-4"><span>Veja</span></button>
+       <button class="custom-btn btn-5"><span>Veja</span></button>
+       <button class="custom-btn btn-6"><span>Veja</span></button>
+       <button class="custom-btn btn-7"><span>Veja</span></button>
+       <button class="custom-btn btn-8"><span>Veja</span></button>
+       <button class="custom-btn btn-9">Veja</button>
+       <button class="custom-btn btn-10">Veja</button>
+       <button class="custom-btn btn-11">Veja<div class="dot"></div></button>
+       <button class="custom-btn btn-12"><span>Clique</span><span>Veja</span></button>
+       <button class="custom-btn btn-13">Veja</button>
+       <button class="custom-btn btn-14">Veja</button>
+       <button class="custom-btn btn-15">Veja</button>
+       <button class="custom-btn btn-16">Veja</button>
        <p style="font-family: Andale Mono, monospace;">
-         DEERBUCKS.DESIGNING</p>
-     </div>
-     
+         Cleiton Paiva</p>
+     </div>     
 </body>
 </html>
